Biz-205 - fix text overflow on teasers

--- a/less/business.less
+++ b/less/business.less
@@ -1622,6 +1622,9 @@ footer + [class*="teaser-tag-"] {
 		margin-right: 20px;
 		margin-bottom: 0;
 	}
+	h2 {
+		overflow: hidden;
+	}
 	@media (max-width: @screen-xs-max) {
 		.teaser-img {
 			// float: none;
